--- a/GulpProject/src/scss/variables/colors.scss
+++ b/GulpProject/src/scss/variables/colors.scss
@@ -1,2 +1,8 @@
-$dove_gray: #666666;
-$white: #ffffff;
+/* COLOR PALETTE: */
+$background_color: #F5F5F5; //Background
+$primary_text: black; //Primary Text
+$primary_color: #ffc34d; //Primary color
+$primary_color_text: white; //Primary color_text
+$accent_color: #CDDC39; //Accent color
+$accent_color_text: black; //Accent color_text
+$menu_color: #333;
