--- a/GulpProject/src/scss/pages/homepage.scss
+++ b/GulpProject/src/scss/pages/homepage.scss
@@ -77,12 +77,13 @@ header{
     font-size: $font_size_p;
 }
 #main_menu .selected{
-    background-color:$primary_color;
+    background-color: $primary_color;
     color: $primary_text;
 }
 #main_menu li:hover:not(.selected){
     background-color: #111;
 }
+
 /* Buscador */
 input[type=text] {
     width: 20em;
@@ -105,7 +106,7 @@ input[type=text]:focus {
    // padding: 1em;
     text-align: center;
 }
-#home{
+.home{
     padding: $font_size_p*3;
     width: 100%;
     height: 30em;
@@ -121,6 +122,10 @@ input[type=text]:focus {
  //   position: -webkit-sticky;
  //  position: sticky;
     //top: 0;
+}
+
+.disappear{
+    display: none;
 }
 #services{
     padding: $font_size_p*3;
